<resources>
    <string name="app_name">On-Boarding</string>
    <string name="tasks">Tasks</string>
    <string name="checklists">Checklists</string>
    <string name="news">News</string>
    <string name="onboarding_app">Onboarding App</string>
    <string name="log_in_using_credentials">Log in using your credentials</string>
    <string name="log_in">Log in</string>
    <string name="example_credentials">user@company.com</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="log_out">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wow_much_empty">Wow! Much empty!</string>
</resources>